<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="leader_board">LeaderBoard</string>
    <string name="submit">Submit</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="badge_image_content_descriptiom">Badge Image</string>
    <string name="submit_actionbar_content_description">Logo for submit activity ActionBar</string>
    <string name="gads_logo_content_description">Gads logo</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="project_on_github">Project on GITHUB (link)</string>
    <string name="hours_text">%1$s learning hours, %2$s </string>
    <string name="skill_iq_text">%1$s skill IQ score, %2$s </string>
    <string name="close_dialog_cd">Close dialog</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="question_mark">\?</string>
</resources>