<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/xlarge_margin"
    android:background="@drawable/round_corner_background"
    android:orientation="vertical"
    android:padding="@dimen/large_margin">

    <ImageView
        android:id="@+id/icClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close_dialog_cd"
        android:padding="@dimen/medium_margin"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/are_you_sure"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="?"
            android:textSize="40sp" />
    </LinearLayout>

    <Button
        android:id="@+id/confirmSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/xlarge_margin"
        android:background="@drawable/round_stroke_corner_background"
        android:paddingStart="@dimen/xxxlarge_margin"
        android:paddingTop="@dimen/medium_margin"
        android:paddingEnd="@dimen/xxxlarge_margin"
        android:paddingBottom="@dimen/medium_margin"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/yellow_text" />
</LinearLayout>