<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.SubmitActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?homeAsUpIndicator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="40dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/gads_logo_content_description"
                android:src="@drawable/gads_logo" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_top">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/project_submission"
                android:textColor="@color/yellow_text"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@color/yellow_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="@dimen/medium_margin"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/firstNameEt"
                    style="@style/submit_et"
                    android:autofillHints="Name"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/lastNameEt"
                    style="@style/submit_et"
                    android:autofillHints="Name"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:layout_marginEnd="8dp"

                android:autofillHints="Email"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/projectLinkEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/large_margin"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="@dimen/medium_margin"
                android:autofillHints="Link"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/project_on_github"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/submitProjectBtn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/xlarge_margin"
                android:background="@drawable/round_corner_background"
                android:backgroundTint="@color/yellow_text"
                android:paddingStart="@dimen/xxlarge_margin"
                android:paddingEnd="@dimen/xxlarge_margin"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>